--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = MooX::ChainedAttributes
+name    = MooX-ChainedAttributes
 author  = Aran Deltac <bluefeet@gmail.com>
 license = Perl_5
 copyright_holder = Aran Deltac
