--- a/dist.ini
+++ b/dist.ini
@@ -3,35 +3,4 @@ author  = Aran Deltac <bluefeet@gmail.com>
 license = Perl_5
 copyright_holder = Aran Deltac
 
-[@Basic]
-[ManifestSkip]
-
-[NextRelease]
-format = %-9v %{yyyy-MM-dd}d
-
-[@Git]
-
-[Git::NextVersion]
-first_version = 0.01
-
-[Repository]
-
-[PkgVersion]
-[PodCoverageTests]
-[PodSyntaxTests]
-
-[GithubMeta]
-issues = 1
-
-[ReadmeAnyFromPod / ReadmePodInRoot]
-type = pod
-filename = README.pod
-location = root
-
-[Prereqs]
-Moo = 1.004005
-strictures = 1.004004
-
-[Prereqs / TestRequires]
-Test::Simple    = 0.94
-
+[@Author::BLUEFEET]
